# challenge-sonar-health

./: .gitignore  README.md  pyproject.toml
core/: __init__.py  api.py  config.py  main.py  models.py  storage.py
core/data/: generate_data.py
core/tests/: __init__.py  test_api.py  test_storage.py
docs/: README.md  SONAR_HEALTH_TECHNICAL_CHALLENGE.md
