[project]
name = "heart-rate-metrics"
version = "1.0.0"
description = "FastAPI service for ingesting and querying heart rate data from multiple devices"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "polars>=1.20.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.0",  # For data generator
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv]
dev-dependencies = [
    "pypdf>=6.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

